# Knowledge-Map

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE.md  docker-compose.yml  knowledge-map-backend-x86_64-pc-windows-msvc.spec  package-lock.json  package.json  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
desktop/: README_DESKTOP.md
desktop/backend/: build_backend.ps1  run_backend.py
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  global.d.ts  main.tsx
front/src/api/: client.ts  config.ts
front/src/components/: ApiModelSettings.tsx  CategoryTimeline.tsx  PaperCard.tsx  PaperNetworkGraph.tsx  PaperSearchPanel.tsx  PaperUploadButton.tsx  PaperUploadModal.tsx  TaskProgressPanel.tsx  UpdateBanner.tsx
front/src/pages/: KnowledgeMapPage.tsx  NetworkPage.tsx  (+1 more)
map/: app.js  data.js  index.html  network.html  network.js  paper.html  paper.js  styles.css
scripts/: setup_clean_env.ps1
src/: config.py  main.py  schemas.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/agents/: classify_agent.py  graph.py  innovation_agent.py  limitation_agent.py  reflection_agent.py  source_agent.py
src/data/: papers.json
src/database/: json_store.py  kv.py  redis_client.py
src/llm/: provider.py  settings.py
src/services/: external_paper_lookup.py  metadata_extractor.py  mineru_settings.py  paper_file_manager.py  paper_graph_builder.py  paper_metadata_pipeline.py  paper_record_cleaner.py  pdf_loader.py
src/tools/: repair_metadata_records.py
(+14 files in other folders)
