[package]
name = "knowledge-map"
version = "0.1.0"
description = "Knowledge Map desktop app"
authors = ["Knowledge Map"]
license = "MIT"
repository = ""
default-run = "knowledge-map"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-open", "path-all", "http-all", "fs-all", "protocol-all", "updater", "process-relaunch", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reqwest 用于在 Rust 端轮询 /api/health（与 Python 端健康自检互补）
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
